contrast fix

--- a/src/styles/prices.module.css
+++ b/src/styles/prices.module.css
@@ -15,7 +15,7 @@
   align-items: center;
   width: 300px;
   max-width: 100%;
-  background-color: rgba(0, 0, 0, 0.15);
+  background-color: rgba(0, 0, 0, 0.45);
   position: relative;
 }
 
