--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -367,4 +367,5 @@ body {
   width: 100%;
   font-size: 18px;
   max-width: 250px;
+  background-color: rgba(0, 0, 0, 0.8);
 }
